# api/openapi/q2-api.json
@@ -176,7 +176,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ProofResponse"
+                  "$ref": "#/components/schemas/DeliveredProofResponse"
                 }
               }
             }
@@ -3338,6 +3338,23 @@
         "properties": {
           "password": {
             "type": "string",
+            "nullable": true
+          }
+        }
+      },
+      "DeliveredProofResponse": {
+        "required": [
+          "proof",
+          "conversationId"
+        ],
+        "type": "object",
+        "properties": {
+          "proof": {
+            "$ref": "#/components/schemas/ProofResponse"
+          },
+          "conversationId": {
+            "type": "string",
+            "format": "uuid",
             "nullable": true
           }
         }
